--- a/TRN-CSGO/TRN-CSGO.csproj
+++ b/TRN-CSGO/TRN-CSGO.csproj
@@ -4,6 +4,11 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>TRN_CSGO</RootNamespace>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
 
 </Project>
